--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,4 +11,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run python unit tests
       run: |
+        pip install selenium
         python3 test.py
+        pip install chromedriver-py
